tests/baselines/reference/constructorNameInGenerator.errors.txt
tests/cases/conformance/salsa/constructorNameInGenerator.ts(2,6): error TS1360: Class constructor may not be a generator.


==== tests/cases/conformance/salsa/constructorNameInGenerator.ts (1 errors) ====
    class C2 {
        *constructor() {}
         ~~~~~~~~~~~
!!! error TS1360: Class constructor may not be a generator.
    }
    